name          : kibr
version       : 2.0.0
license       : BSD3
cabal-version : >= 1.10
build-type    : Simple

test-suite test-kibr
  type             : exitcode-stdio-1.0
  main-is          : test-kibr.hs
  hs-source-dirs   : test bin
  default-language : Haskell2010
  ghc-options      : -Wall -fno-warn-name-shadowing
                     -threaded -rtsopts -with-rtsopts=-N
  other-modules    : Kibr.Fixture
                     Kibr.Test
  build-depends    : acid-state,
                     base == 4.*,
                     bytestring,
                     containers,
                     data-default,
                     HUnit,
                     hxt,
                     ixset,
                     kibr,
                     QuickCheck,
                     quickcheck-instances,
                     test-framework,
                     test-framework-hunit,
                     test-framework-quickcheck2,
                     test-framework-th,
                     text

executable kibr
  main-is          : kibr.hs
  hs-source-dirs   : bin
  default-language : Haskell2010
  ghc-options      : -Wall -fno-warn-name-shadowing
  build-depends    : base == 4.*,
                     kibr

library
  hs-source-dirs   : src
  default-language : Haskell2010
  ghc-options      : -Wall -fno-warn-name-shadowing
  exposed-modules  : Kibr.CLI
                     Kibr.Data
                     Kibr.DICT
                     Kibr.IRC
                     Kibr.Run
                     Kibr.State
                     Kibr.Text
                     Kibr.Web
                     Kibr.XML
                     Control.Lens.TH.Extra
                     Data.IxSet.Lens
                     Text.XML.HXT.HSX
  build-depends    : acid-state,
                     ansi-wl-pprint,
                     base                      == 4.*,
                     bytestring,
                     containers,
                     data-default,
                     directory,
                     dyre,
                     filepath,
                     happstack-server          == 7.*,
                     hashable,
                     hsx,
                     hxt                       == 9.*,
                     hxt-http,
                     interpolatedstring-perl6,
                     irc,
                     ircbot                    >= 0.5,
                     ixset,
                     lens                      >= 1.3,
                     mtl                       == 2.*,
                     network,
                     optparse-applicative      >= 0.3.1,
                     safecopy,
                     template-haskell,
                     text,
                     unordered-containers,
                     xdg-basedir
  if os(windows)
    cpp-options    : -DWINDOWS
  else
    build-depends  : hxt-expat,
                     terminfo,
                     text-icu
